--- a/client/index.html
+++ b/client/index.html
@@ -61,12 +61,19 @@
     <script src="js/app/models/Negociacao.js"></script>
 
     <script>
-        var n1 = new Negociacao(new Date(), 5, 700);
 
-        console.log(n1.getQuantidade());
-        console.log(n1.getData());
-        console.log(n1.getValor());
-        console.log(n1.obtemVolume());
+        var hoje = new Date();
+
+        var n1 = new Negociacao(hoje, 5, 700);
+
+        console.log(n1.data);
+
+        n1.data.setDate(11);
+
+        hoje.setDate(11);
+
+        console.log(n1.data);
+
 
     </script>
 </body>
