--- a/client/exc.html
+++ b/client/exc.html
@@ -78,12 +78,21 @@
                     event.preventDefault();
 
                     this._listaClientes.adiciona(this._criaCliente());
+
+                    this._limpaFormulario();
                 }
 
                 _criaCliente() {
                     return new Cliente(
                         this._inputNome.value,
                         this._inputSobrenome.value);
+                }
+
+                _limpaFormulario(){
+                    this._inputNome.value          = '';
+                    this._inputSobrenome.value     = '';
+
+                    this._inputNome.focus();
                 }
             }
 
@@ -102,6 +111,8 @@
             }
 
             let clienteController = new ClienteController();
+
+            console.log(clienteController);
 
         </script>
     </body>
