--- a/client/exc.html
+++ b/client/exc.html
@@ -112,8 +112,7 @@
 
             let clienteController = new ClienteController();
 
-            console.log(clienteController);
-
+            console.log(Cliente);
         </script>
     </body>
 </html>
