--- a/client/index.html
+++ b/client/index.html
@@ -56,5 +56,17 @@
         let negociacaoController = new NegociacaoController();
 
     </script>
+
+    <script>
+        let lista = new Proxy(new ListaNegociacoes(), {
+            set: function(target, prop, value, receiver){
+                console.log(`Valor anterior: ${target[prop]}, novo valor: ${value}`);
+                return Reflect.set(target, prop, value, receiver);
+            }
+        });
+
+        lista.adiciona(new Negociacao(new Date(), 1, 100));
+
+    </script>
 </body>
 </html>
