--- a/client/exc.html
+++ b/client/exc.html
@@ -122,7 +122,7 @@
 
             let clienteController = new ClienteController();
 
-            console.log(Cliente);
+            console.log(clienteController);
         </script>
     </body>
 </html>
