--- a/client/indexeddb.html
+++ b/client/indexeddb.html
@@ -81,6 +81,18 @@
             };
         }
 
+        ConnectionFactory
+            .getConnection()
+            .then(connection => {
+
+            });
+
+        ConnectionFactory
+            .getConnection()
+            .then(connection => {
+
+            });
+
     </script>
 </body>
 </html>
